--- a/listcreator_nodeproxy/package.json
+++ b/listcreator_nodeproxy/package.json
@@ -2,7 +2,7 @@
   "name": "fachbegriffelotto-nodeproxy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "follow-redirects": "^1.15.3",
     "openai": "^4.14.1"
   }
 }
